<resources>
    <string name="dialog_title_stub">Неизвестная ошибка</string>
    <string name="dialog_button_cancel">Понятно</string>
    <string name="app_name">Мир на ладони</string>
    <string name="search_name">Найдено</string>
    <string name="weather_name">Погода в столице</string>
    <string name="details_name">Коротко о главном</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_state">Hello state!</string>
    <string name="state">state1</string>
    <string name="name">Россия</string>
    <string name="connecting">Подключение к серверу…</string>
    <string name="weatherInCap">Погода в столице</string>
    <string name="geoLocation">Место на карте</string>
    <string name="hello_capital">hello_capital</string>
    <string name="unknown">Unknown</string>
    <string name="Unknown">Unknown</string>
    <string name="ErrorCity">Город не найден. Проверьте наличие интернета</string>
    <string name="action_find">Поиск</string>
    <string name="Help">"Справка "</string>
    <string name="search">Поиск</string>
    <string name="identifier">android:id/search_close_btn</string>
    <string name="about">О приложении</string>
    <string name="settings">Настройки</string>
    <string name="favorites">Избранное</string>
    <string name="help">Справка</string>
    <string name="message">MESSAGE</string>
    <string name="aboutAppMessage">GeekBrains Андроид -популярные библиотеки</string>
    <string name="cbSortOn">Выберите способ сортировки списка государств </string>
    <string name="cbSortOff">Сортировка списков по алфавиту </string>
    <string name="ListSort">Выбор способа сортировки списка государств</string>
    <string name="noHelp">Справка недоступна</string>
    <string name="ok">OK</string>
    <string name="home">Домой</string>
    <string name="map">Карта</string>
    <string name="select">Избр.</string>
    <string name="remove">Удалить</string>
    <string name="weather">Погода</string>
    <string name="no_data_available">Нет данных \n Попробуйте изменить поисковый запрос </string>
    <string name="no_data_state">"Нет данных   Проверьте наличие Интернета "</string>
    <string name="dialog_message_device_is_offline">Вы не сможете эффективно использовать приложение без подключения к Интернету. Пожалуйста, проверьте интернет-соединение</string>
    <string name="weather_device_is_offline">Вы не можете получить погоду без подключения к Интернету. Пожалуйста, проверьте интернет-соединение</string>
    <string name="search_in_list">Найти в списке</string>
    <string name="search_in_list_helper_text">Поищите страну в списке</string>
    <string name="fruit">Фрукты</string>
    <string name="vegetables">Овощи</string>
    <string name="nature">Природа</string>
    <string name="animals">Животные</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sub_">Полезная информация о странах мира</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="addition">Дополнительно</string>
    <string name="share">Поделиться</string>
    <string name="send">Оценить</string>
    <string name="sorting">Сортировка</string>
    <string name="is_sorting">Нужна сортировка?</string>
    <string name="green">Зелёная тема</string>
    <string name="violent">Фиолетовая тема</string>
    <string name="favor">В избранное</string>
    <string name="addFavoriteToast">Добавлено в Избранное</string>
    <string name="no_data_favorite">"Нет данных. Добавьте страну в избранное "</string>
    <string name="favorite_name">Избранное</string>
    <string name="remove_favorites">Удалить из избранного</string>
    <string name="addToFavorite">Добавить в избранное</string>
    <string name="removeFromFavorite">Удалить из избранного</string>
    <string name="removeFavoriteToast">Удалено из избранного</string>
    <string name="geo_name">Карта</string>
    <string name="forExit">Для выхода нажмите  НАЗАД  ещё раз</string>
    <string name="sett">Настройки</string>
    <string name="area">Площадь</string>
    <string name="population">Население</string>
    <string name="help_name">Справка</string>
    <string name="header">  Попробуйте моё новое приложение Мир на ладони,
                    загрузив его из GooglePlay по ссылке</string>
    <string name="uri_stor">https://play.google.com/store/apps/details?id=com.bartex.states_search</string>
    <string name="blok1">Расскажу, как им пользоваться, чтобы получить максимум пользы.</string>
    <string name="blok2">На главном экране список из 240 стран мира. Тыкаете в любую и попадаете на экран
                    детализации, где увидите флаг, размер территории, население. Но всё это фигня.</string>
    <string name="blok3"> В нижнем меню тыкаете на пункте Карта и попадаете на карту Google приблизительно в
                    месте расположения указанной страны. Тыкаете в название страны на карте
                    и перед вами открывается куча открыточных видов этой страны.</string>
    <string name="blok4">  Кроме того, в некоторых местах есть панорамные фото, видео и
                    гугловская навигация по дорогам. Смотрите не залипните - в некоторых странах
                    есть ну очень красивые картинки. Россия, кстати, не исключение.</string>
    <string name="blok5">Приятного путешествия.</string>
    <string name="pref_name">Настройки</string>
    <string name="noAddFavoriteToast">Ошибка. Не добавлено в избранное</string>
    <string name="noRemoveFavoriteToast">Ошибка. Не удалено из избранного</string>
    <string name="Википедия">wiki</string>
    <string name="wiki">Википедия</string>
    <string name="lang">Выберите язык.</string>
    <string name="helpString222">Мир на ладони. \n\n
Программа предназначена для получения справочной информации о различных странах мира\n\n
Для каждой из более чем двухсот стран можно получить данные о численности населения,
площади территории, изображении флага, названии столицы и др.\n
Кстати, если вы захотите  проверить свои знания национальных флагов, это можно
сделать на экране с изображениями флагов\n\n
Местоположение любой страны можно посмотреть на карте мира, щёлкнув на значке "Карта".
В открывшейся карте Google по щелчку на названии страны или города вы получаете доступ
к красочным фотографиям и другим данным, связанным с выбранным местом\n\n
Текущие погодные условия в столице каждой страны можно  узнать по щелчку на значке "Погода"\n\n
Более подробную информацию об истории, экономике, культуре каждой страны можно получить из Википедии,
подключившись к ней  по щелчку на значке "Вики"\n\n
Функция поиска, расположенная в верхней части экрана со списком стран,
позволяет найти интересующую вас страну всего по нескольким буквам из её названия\n\n
Для ускоренного доступа понравившиеся вам страны можно сохранить в списке "Избранное"\n\n
Развлекательная викторина предлагает угадать название страны по флагу или флаг по названию страны,
при этом страны и флаги можно ограничить выбранным регионом\n
Ошибки, допущенные в викторине, сохраняются на вкладке Ошибки и могут быть просмотрены\n\n
Через настройки приложения  можно сделать сортировку стран по площади территории,
численности и плотности населения, выбрать язык и  цветовое оформление приложения,
а также задать количество вопросов и количество вариантов ответов в викторине\n\n
</string>
    <string-array name="pref_entry_sort">
        <item>По населению по убыванию</item>
        <item>По населению по возрастанию</item>
        <item>По площади по убыванию</item>
        <item>По площади по возрастанию</item>
        <item>По плотности по убыванию</item>
        <item>По плотности по возрастанию</item>
    </string-array>
    <string-array name="pref_entryValues_sort">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="pref_entry_color">
        <item>Стандартная</item>
        <item>Зелёная</item>
        <item>Фиолетовая</item>
        <item>Красная</item>
        <item>Синяя</item>
        <item>Чёрная</item>
    </string-array>
    <string-array name="pref_entryValues_color">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="title_activity_settings">Настройки</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="splash">Экран загрузки</string>
    <string name="show_hide">Показать/скрыть.</string>
    <string name="show_screen">Показываем экран загрузки</string>
    <string name="hide_screen">Не показываем экран загрузки</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="kind_sort">Способ сортировки</string>
    <string name="app_theme">Тема приложения</string>
    <string name="choose_color_theme">Выберите цветовую тему приложения</string>
    <string name="theme_cat">Тема</string>
    <string name="toastForExit">Для выхода нажмите ещё раз</string>
    <string name="wiki_act">Википедия</string>
    <string name="summary_switch_preference">Язык</string>
    <string name="changeLang">Выберите язык приложения</string>
    <string name="appLang">Язык для названий стран</string>
    <string name="summary_on">Русский</string>
    <string name="summary_off">English</string>
    <string name="dialog_title_device_is_offline">Нет соединения с Интернетом</string>
    <string name="dialog_message_load_impossible">Для первоначальной загрузки данных требуется Интернет.
        Пожалуйста, проверьте интернет-соединение</string>
    <string name="flags">Флаги</string>
    <string name="mistakes">Ошибки</string>
    <string name="regions">Регионы</string>
    <string name="liked">"Избранное "</string>
    <string name="quiz">Викторина</string>
    <string name="choose_play2">Поиграем!</string>
    <string name="headerMain">Мир на ладони</string>
    <string name="divider">divider</string>
    <string name="textQuizMain">Текстовая викторина</string>
    <string name="statesOfWorld">Страны мира</string>
    <string name="imageQuizMain">Викторина в картинках</string>
    <string name="imageQuiz">Викторина</string>
    <string name="number_of_choices">Количество вариантов ответов</string>
    <string name="number_of_flags">Количество вопросов в викторине</string>
    <string name="number_of_choices_description">Отображаются 2, 4 или 6 кнопок с вариантами ответов</string>
    <string name="number_of_flags_description">Нужно угадать 5, 10, 15 или 20 флагов</string>
    <string name="all">Все</string>
    <string name="Europa">Европа</string>
    <string name="Asia">Азия</string>
    <string name="America">Америка</string>
    <string name="Oceania">Океания</string>
    <string name="Africa">Африка</string>
    <string name="quest">Вопросы</string>
    <string name="answers">Ответы</string>
    <string name="incorrect">Неправильные ответы</string>
    <string name="incorrect_stub">Заменитель флага</string>
    <string name="incorrect_stub_description">Изображение-заменитель флага при неправильном ответе</string>
    <string name="sound">Звук</string>
    <string name="is_sound">Включение/выключение звука</string>
    <string name="questionsStub">Мадагаскар</string>
    <string name="any_image">Изображение</string>
    <string name="MediumTextStub">Правильно</string>
</resources>