<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/sorting">

    <CheckBoxPreference
        android:key="cbSort"
        android:title="@string/is_sorting"
        app:defaultValue="true"
        android:summaryOn="@string/cbSortOn"
        android:summaryOff="@string/cbSortOff">
    </CheckBoxPreference>

    <ListPreference
        android:dependency="cbSort"
        android:entries="@array/pref_entry_sort"
        android:entryValues="@array/pref_entryValues_sort"
        android:key="ListSort"
        android:title="@string/kind_sort"
        app:defaultValue="3"
        android:summary="@string/ListSort">
    </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/theme_cat">
        <ListPreference
            android:entries="@array/pref_entry_color"
            android:entryValues="@array/pref_entryValues_color"
            android:key="ListColor"
            android:title="@string/app_theme"
            app:defaultValue="1"
            android:summary="@string/choose_color_theme">
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/appLang">

        <SwitchPreferenceCompat
            android:key="switchLang"
            android:title="@string/lang"
            android:summaryOn="@string/summary_on"
            android:summaryOff="@string/summary_off"
            app:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/splash">
        <CheckBoxPreference
            android:key="cbScreen"
            android:title="@string/show_hide"
            app:defaultValue="true"
            android:summaryOn="@string/show_screen"
            android:summaryOff="@string/hide_screen">
        </CheckBoxPreference>
    </PreferenceCategory>


    <PreferenceCategory
        app:title="@string/quest">

        <ListPreference
            android:key="pref_numberOfFlags"
            android:entries="@array/flagNumber_list"
            android:entryValues="@array/flagNumber_list"
            android:title="@string/number_of_flags"
            android:summary="@string/number_of_flags_description"
            android:persistent="true"
            android:defaultValue="5" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title = "@string/answers">

        <ListPreference
            android:key="pref_numberOfChoices"
            android:entries="@array/guesses_list"
            android:entryValues="@array/guesses_list"
            android:title="@string/number_of_choices"
            android:summary="@string/number_of_choices_description"
            android:persistent="true"
            android:defaultValue="6" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title = "@string/incorrect">

        <ListPreference
            android:key="pref_incorrect"
            android:entries="@array/incorrect_list"
            android:entryValues="@array/incorrect_value_list"
            android:title="@string/incorrect_stub"
            android:summary="@string/incorrect_stub_description"
            android:persistent="true"
            android:defaultValue="1" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sound">

        <CheckBoxPreference
            android:key="pref_cbSound"
            android:title="@string/is_sound"
            app:defaultValue="true"
            android:summaryOn="@string/cbSortOn"
            android:summaryOff="@string/cbSortOff">
        </CheckBoxPreference>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>