<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/states"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/flags"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_outlined_flag_24"
        android:title="@string/flags"/>

    <item
        android:id="@+id/liked"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/liked"/>

    <item
        android:id="@+id/quiz"
        android:enabled="true"
        android:icon="@drawable/fencing4"
        android:title="@string/quiz"/>

    <item
        android:id="@+id/geo"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_location_on_24_white"
        android:title="@string/map"/>

    <item
        android:id="@+id/weather"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_beach_access_24_white"
        android:title="@string/weather"/>

    <item
        android:id="@+id/wiki"
        android:enabled="true"
        android:icon="@drawable/ic_wikipedia"
        android:title="@string/wiki"/>

</menu>