<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/quizLinearLayoutStates"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gr3">

    <ProgressBar
        android:id="@+id/progressBarStates"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="gone" />

        <HorizontalScrollView
            android:id="@+id/hor_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_region_states"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="5dp"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_all_states"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_Europa_states"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Europa" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_Asia_states"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Asia"  />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_America_states"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/America" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_Oceania_states"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Oceania"  />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_Africa_states"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Africa"  />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/questionTextView_states"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/questionsStub"
            android:textSize="@dimen/answer_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hor_scroll_view"
            app:layout_constraintBottom_toTopOf="@+id/row1LinearLayout_states"/>

        <LinearLayout
            android:id="@+id/row1LinearLayout_states"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionTextView_states">

            <ImageView
                android:id="@+id/button_states"
                style="@style/ImageAnswerStyle"
                android:contentDescription="@string/any_image"
                tools:src="@tools:sample/avatars[0]"/>

            <ImageView
                android:id="@+id/button2_states"
                style="@style/ImageAnswerStyle"
                android:contentDescription="@string/any_image"
                tools:src="@tools:sample/avatars[1]"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2LinearLayout_states"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row1LinearLayout_states">

            <ImageView
                android:id="@+id/button3_states"
                style="@style/ImageAnswerStyle"
                android:contentDescription="@string/any_image"
                tools:src="@tools:sample/avatars[2]"/>

            <ImageView
                android:id="@+id/button4_states"
                style="@style/ImageAnswerStyle"
                android:contentDescription="@string/any_image"
                tools:src="@tools:sample/avatars[3]"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3LinearLayout_states"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row2LinearLayout_states">

            <ImageView
                android:id="@+id/button5_states"
                style="@style/ImageAnswerStyle"
                android:contentDescription="@string/any_image"
                tools:src="@tools:sample/avatars[4]"/>

            <ImageView
                android:id="@+id/button6_states"
                style="@style/ImageAnswerStyle"
                android:contentDescription="@string/any_image"
                tools:src="@tools:sample/avatars[5]"/>
        </LinearLayout>

        <TextView
            android:id="@+id/answerTextView_states"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MediumTextStub"
            android:layout_marginTop="@dimen/layout_margin_8dp"
            android:paddingBottom="@dimen/layout_margin_8dp"
            android:textSize="@dimen/answer_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row3LinearLayout_states"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
